--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -1,11 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<?import javafx.scene.layout.*?>
-
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bsuapplicationsystem.Controllers.LoginController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="1005.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bsuapplicationsystem.Controllers.LoginController">
+   <left>
+      <AnchorPane prefHeight="573.0" prefWidth="324.0" BorderPane.alignment="CENTER">
+         <ImageView fitHeight="573.0" fitWidth="435.0" layoutX="-14.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../Images/banner.png" />
+            </image>
+         </ImageView>
+      </AnchorPane>
+   </left>
+   <right>
+      <AnchorPane prefHeight="552.0" prefWidth="668.0" style="-fx-background-color: 0000;" BorderPane.alignment="CENTER">
+         <Button fx:id="registerBTN" layoutX="345.0" layoutY="512.0" mnemonicParsing="false" style="-fx-background-color: 00000;" text="Register" textFill="RED">
+            <font>
+               <Font name="Nirmala UI Bold" size="15.0" />
+            </font>
+         </Button>
+         <Text layoutX="229.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="USER LOGIN">
+            <font>
+               <Font name="Nirmala UI Bold" size="30.0" />
+            </font>
+         </Text>
+         <Text layoutX="104.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="USERNAME">
+            <font>
+               <Font name="Nirmala UI Bold" size="14.0" />
+            </font>
+         </Text>
+         <TextField fx:id="usernameTfield" layoutX="104.0" layoutY="204.0" prefHeight="45.0" prefWidth="400.0" promptText="  Enter you username or email here." style="-fx-background-color: D3D3D3;" AnchorPane.leftAnchor="104.0">
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="25.0" top="10.0" />
+            </padding>
+            <font>
+               <Font size="14.0" />
+            </font>
+         </TextField>
+         <PasswordField fx:id="passwordTfield" layoutX="103.0" layoutY="283.0" prefHeight="45.0" prefWidth="400.0" promptText="  Enter your password here." style="-fx-background-color: D3D3D3;">
+            <font>
+               <Font size="14.0" />
+            </font></PasswordField>
+         <Text layoutX="103.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PASSWORD">
+            <font>
+               <Font name="Nirmala UI Bold" size="14.0" />
+            </font>
+         </Text>
+         <Button fx:id="loginBTN" layoutX="102.0" layoutY="351.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="400.0" style="-fx-background-color: B60808;" text="LOGIN" textFill="WHITE">
+            <padding>
+               <Insets bottom="10.0" left="25.0" right="25.0" top="10.0" />
+            </padding>
+            <font>
+               <Font name="Nirmala UI Bold" size="20.0" />
+            </font>
+         </Button>
+         <Button fx:id="switchAdminBTN" layoutX="452.0" layoutY="31.0" mnemonicParsing="false" style="-fx-background-color: B60808;" text="LOGIN AS ADMIN" textFill="WHITE">
+            <font>
+               <Font name="Nirmala UI Bold" size="10.0" />
+            </font>
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+         </Button>
+         <Line endX="68.0" layoutX="357.0" layoutY="512.0" startX="-185.0" />
+         <Text layoutX="169.0" layoutY="533.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Doesn't have an account?">
+            <font>
+               <Font name="Nirmala UI" size="16.0" />
+            </font>
+         </Text>
+         <Text fx:id="invalidMessage" fill="RED" layoutX="204.0" layoutY="417.0" strokeType="OUTSIDE" strokeWidth="0.0">
+            <font>
+               <Font name="Nirmala UI" size="14.0" />
+            </font>
+         </Text>
+      </AnchorPane>
+   </right>
+</BorderPane>
