--- a/src/main/resources/Fxml/User/User.fxml
+++ b/src/main/resources/Fxml/User/User.fxml
@@ -2,9 +2,14 @@
 
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bsuapplicationsystem.Controllers.User.UserController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane fx:id="user_parent" xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml">
+    <left>
+        <fx:include source="UserMenu.fxml"/>
+    </left>
+    <center>
+        <fx:include source="HomeDashboard.fxml"/>
+    </center>
 
-</AnchorPane>
+
+</BorderPane>
