--- a/src/main/resources/Fxml/User/UserMenu.fxml
+++ b/src/main/resources/Fxml/User/UserMenu.fxml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bsuapplicationsystem.Controllers.User.UserMenuController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="748.0" prefWidth="217.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bsuapplicationsystem.Controllers.User.UserMenuController">
+    <AnchorPane prefHeight="754.0" prefWidth="217.0" style="-fx-background-color: C50000;">
+        <ImageView fitHeight="80.0" fitWidth="88.0" layoutX="65.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@../../Images/logo.png" />
+        </ImageView>
+        <VBox layoutX="13.0" layoutY="200.0" prefHeight="438.0" prefWidth="190.0">
+            <Button fx:id="homeBTN" mnemonicParsing="false" prefHeight="57.0" prefWidth="210.0" style="-fx-background-color: B10000;" text="HOME" textAlignment="CENTER" textFill="WHITE">
+                <font>
+                    <Font name="Nirmala UI Bold" size="14.0" />
+                </font>
+            </Button>
+            <Line endX="89.5" startX="-100.0" stroke="WHITE" />
+            <Button fx:id="programOffersBTN" mnemonicParsing="false" prefHeight="57.0" prefWidth="194.0" style="-fx-background-color: B10000;" text="PROGRAM OFFERS" textFill="WHITE">
+                <font>
+                    <Font name="Nirmala UI Bold" size="14.0" />
+                </font>
+            </Button>
+            <Line endX="89.5" startX="-100.0" stroke="WHITE" />
+            <Button fx:id="applicationBTN" mnemonicParsing="false" prefHeight="57.0" prefWidth="192.0" style="-fx-background-color: B10000;" text="APPLICATION" textFill="WHITE">
+                <font>
+                    <Font name="Nirmala UI Bold" size="14.0" />
+                </font>
+            </Button>
+            <Line endX="89.5" startX="-100.0" stroke="WHITE" />
+            <Button fx:id="statusBTN" mnemonicParsing="false" prefHeight="57.0" prefWidth="193.0" style="-fx-background-color: B10000;" text="APPLICATION STATUS" textFill="WHITE">
+                <font>
+                    <Font name="Nirmala UI Bold" size="14.0" />
+                </font>
+            </Button>
+            <Line endX="89.5" startX="-100.0" stroke="WHITE" />
+            <Button fx:id="forumBTN" mnemonicParsing="false" prefHeight="57.0" prefWidth="203.0" style="-fx-background-color: B10000;" text="FORUM" textFill="WHITE">
+                <font>
+                    <Font name="Nirmala UI Bold" size="14.0" />
+                </font>
+            </Button>
+            <Line endX="89.5" startX="-100.0" stroke="WHITE" />
+            <Button fx:id="signOutBTN" mnemonicParsing="false" prefHeight="57.0" prefWidth="204.0" style="-fx-background-color: B10000;" text="SIGN OUT" textFill="WHITE">
+                <font>
+                    <Font name="Nirmala UI Bold" size="14.0" />
+                </font>
+            </Button>
+        </VBox>
+        <Text fill="WHITE" layoutX="9.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BATANGAS STATE UNIVERSITY TNEU" wrappingWidth="201.0">
+            <font>
+                <Font name="Nirmala UI Bold" size="11.0" />
+            </font>
+        </Text>
+        <Text fill="WHITE" layoutX="18.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="College Application and Applicants Discussion Platform System" textAlignment="CENTER" wrappingWidth="180.0">
+            <font>
+                <Font name="Nirmala UI" size="10.0" />
+            </font>
+        </Text>
+        <Button layoutX="63.0" layoutY="679.0" mnemonicParsing="false" style="-fx-background-color: C50000;" text="How to apply?" textFill="WHITE" />
+        <Line endX="-54.0" layoutX="185.0" layoutY="679.0" startX="-100.0" stroke="WHITE" />
+    </AnchorPane>
+</VBox>
